src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body,
#__next {
  width: 100vw;
  width: 100dvw;
  min-height: 100vh;
  min-height: 100lvh;
  min-height: 100dvh;
  min-height: 100svh;
  max-height: fit-content;
  overflow-x: hidden;
}

.h-dscreen {
  height: 100dvh;
}

.min-h-dscreen {
  min-height: 100dvh;
}

.max-h-dscreen {
  max-height: 100dvh;
}

.h-fill-screen {
  min-height: 100vh;
  min-height: 100lvh;
  min-height: 100dvh;
  min-height: 100svh;
  max-height: fit-content;
}

.h-fix-fill-screen {
  height: 100vh;
  height: 100lvh;
  height: 100dvh;
  height: 100svh;
}

